Hidden objects reappear after rendering. #61788

Closed
opened 2019-02-21 10:41:49 +01:00 by Sina · 9 comments

Blender Version: blender-2.80-ecdd1864d162-linux-glibc224-x86_64
I have some objects which are hidden in viewport. After rendering and closing the render window the hidden objects appear while they are still depicted as hidden objects in Outliner panel. After clicking on the eye icon double times the objects become invisible.

Blender Version: blender-2.80-ecdd1864d162-linux-glibc224-x86_64 I have some objects which are hidden in viewport. After rendering and closing the render window the hidden objects appear while they are still depicted as hidden objects in Outliner panel. After clicking on the eye icon double times the objects become invisible.
Author

Added subscriber: @SinaBlender

Added subscriber: @SinaBlender

#61793 was marked as duplicate of this issue

#61793 was marked as duplicate of this issue

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Here's how to reproduce it:
There are two objects. Select one. Hide it (press h). Render (f12). Go back to the viewport and select second object or click on an empty space. The first object reappears even though it's still marked as hidden.
hide_bug.blend
I'm on Win 10. Blender 2.80 2019-02-20 1af810b4ff

Here's how to reproduce it: There are two objects. Select one. Hide it (press h). Render (f12). Go back to the viewport and select second object or click on an empty space. The first object reappears even though it's still marked as hidden. [hide_bug.blend](https://archive.blender.org/developer/F6677996/hide_bug.blend) I'm on Win 10. Blender 2.80 2019-02-20 1af810b4ff17

Added subscriber: @DotBow

Added subscriber: @DotBow

Added subscriber: @brecht

Added subscriber: @brecht
Dalai Felinto was assigned by Brecht Van Lommel 2019-02-21 12:57:15 +01:00

Caused by 897e047374.

Caused by 897e047374.

This issue was referenced by e278b38b92

This issue was referenced by e278b38b921d625a11544203808575a7180f75e8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61788
No description provided.