source/blender/blenkernel/intern/layer.c
@@ -1500,7 +1500,7 @@ void BKE_layer_eval_view_layer(
 		view_layer->object_bases_array[base_index++] = base;
 	}
 	/* Flush back base flag to the original view layer for editing. */
-	if (view_layer == DEG_get_evaluated_view_layer(depsgraph)) {
+	if (DEG_is_active(depsgraph) && (view_layer == DEG_get_evaluated_view_layer(depsgraph))) {
 		ViewLayer *view_layer_orig = DEG_get_input_view_layer(depsgraph);
 		Base *base_orig = view_layer_orig->object_bases.first;
 		const Base *base_eval = view_layer->object_bases.first;
